Dark mode footer fix

--- a/source/sass/_scaffolding.scss
+++ b/source/sass/_scaffolding.scss
@@ -12,6 +12,9 @@ body{
     margin: 0 auto;
     //transition: $anim;
     color: #2d3436;
+    padding-bottom: 100px;
+    min-height: calc(100vh - 100px);
+    position: relative;
 }
 
 img {
