--- a/source/sass/blocks/_footer.scss
+++ b/source/sass/blocks/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    //position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
 
@@ -18,6 +18,7 @@
         border-bottom-right-radius: 0;
         border-bottom-left-radius: 0;
         box-shadow: 0px 5px 12px rgba(#000, 0.4);
+
     }
 
     &__copy{
